# 72-S

./: .gitignore  Cargo.toml  README.md  build.sh  index.html  repomix-output.xml  serve.sh
.github/workflows/: deploy.yml  portfolio.yml  snake.yml
js/: animation.js  debug.js  effects.js  index.js  model.js  sound.js  terminal3d.js
src/: animator.rs  ascii_art.rs  boot_animation.rs  commands.rs  input_handler.rs  lib.rs  terminal.rs  utils.rs
src/ascii_art/: effects.rs  mod.rs  projects.rs  user.rs
src/boot/: boot.rs  init.rs  login.rs  logo.rs  mod.rs  system.rs
src/commands/: filesystem.rs  misc.rs  mod.rs  network.rs  processor.rs  system.rs
src/input/: autoscroll.rs  history.rs  mod.rs  setup.rs
src/terminal/: autocomplete.rs  buffer.rs  core.rs  dom.rs  line_buffer.rs  mod.rs  renderer.rs
src/utils/: dom.rs  mod.rs  panic.rs  scroll.rs
static/: index.html  styles.css
style/: styles-3d.css  styles.css
web/: package-lock.json  package.json
web/portfolio/: package.json
web/portfolio/src/: App.svelte
web/src/: lib.rs
