[package]
name = "web"
version = "0.1.0"
authors = ["objz <me@objz.dev>"]
edition = "2024"
repository = "https://github.com/objz/objz.git"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"
